test/libsolidity/syntaxTests/inlineAssembly/variable_use_before_decl_2.sol
contract C {
    function f() public pure {
        assembly {
            let x := mul(2, x)
        }
    }
}

// ----
// DeclarationError 4990: (91-92): Variable x used before it was declared.
